update for env file

--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 APP_ENV=local
-APP_KEY=base64:rUpYhq/IpIpRNoGgwVsJGA==
+APP_KEY=base64:x55cQjuHlTflOoLDi97j+F06fR5R6b3zgXXiJ6WRODk=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://wb.local
+APP_URL=https://hidden-caverns-70407.herokuapp.com
+
 
 DB_CONNECTION=mysql
 DB_HOST=103.83.81.7
