updates for mapping

--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ APP_URL=https://hidden-caverns-70407.herokuapp.com
 
 
 DB_CONNECTION=mysql
-DB_HOST=103.83.81.7
+DB_HOST=trial.fcomet.com
 DB_PORT=3306
-DB_DATABASE=fadsancom_wpboard
-DB_USERNAME=fadsa_wp
-DB_PASSWORD=admin@123
+DB_DATABASE=whitebo1_whiteboard
+DB_USERNAME=whitebo1_tekraj
+DB_PASSWORD=+kb,1ckblJ[^
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
