--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ APP_LOG_LEVEL=debug
 APP_URL=tuition.unnatigarments.com
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=whiteboard.unnatigarments.com
 DB_PORT=3306
 DB_DATABASE=unnatiga_tuition
 DB_USERNAME=unnatiga_tuition
