updates for new changes in whiteboard buttons

--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ APP_URL=https://hidden-caverns-70407.herokuapp.com
 
 
 DB_CONNECTION=mysql
-DB_HOST=trial.fcomet.com
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=whitebo1_whiteboard
-DB_USERNAME=whitebo1_tekraj
-DB_PASSWORD=+kb,1ckblJ[^
+DB_DATABASE=whiteboard
+DB_USERNAME=tekraj
+DB_PASSWORD=tekraj@123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
