--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,13 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=tuition.unnatigarments.com
 
+
 DB_CONNECTION=mysql
-DB_HOST=whiteboard.unnatigarments.com
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=unnatiga_tuition
+DB_DATABASE=unnatiga_whiteboard
 DB_USERNAME=unnatiga_tuition
-DB_PASSWORD=tuition@1234567
+DB_PASSWORD=7nBwcoEh_S9*
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
