--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ APP_URL=https://hidden-caverns-70407.herokuapp.com
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=whiteboard
+DB_DATABASE=whiteboard1
 DB_USERNAME=tekraj
 DB_PASSWORD=tekraj@123
 
