--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,12 @@ APP_URL=tuition.unnatigarments.com
 
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=whiteboard.cixkvipte8g7.eu-west-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=unnatiga_whiteboard
-DB_USERNAME=unnatiga_tuition
-DB_PASSWORD=7nBwcoEh_S9*
+DB_DATABASE=whiteboard
+DB_USERNAME=whiteboarddb
+DB_PASSWORD=Kin_kin_timro_tasbir545
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
