bug fixed in tutor panel

--- a/.env
+++ b/.env
@@ -6,11 +6,12 @@ APP_URL=https://hidden-caverns-70407.herokuapp.com
 
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=whiteboard.cixkvipte8g7.eu-west-1.rds.amazonaws.com
 DB_PORT=3306
 DB_DATABASE=whiteboard
-DB_USERNAME=tekraj
-DB_PASSWORD=tekraj@123
+DB_USERNAME=whiteboarddb
+DB_PASSWORD=Kin_kin_timro_tasbir545
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
