--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,26 @@
 /node_modules
+/public/storage
+/storage/*.key
 /vendor
 /.idea
 Homestead.json
 Homestead.yaml
 .env
+/.env
+/public/mailoutput
+/public/blog-images
+/public/logos
+/public/.htaccess
+/mailoutput
+/vendor
+/node_modules
+/storage
+composer.lock
+.env
+.idea
+.log
+.htaccess
+/.env
+/mysql
+/.scannerwork
+/bootstrap/cache/
