storage added to git

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /node_modules
+/public/storage
 /storage/*.key
 /vendor
 /.idea
@@ -13,7 +14,7 @@ Homestead.yaml
 /mailoutput
 /vendor
 /node_modules
-
+/storage
 composer.lock
 .env
 .idea
