updates to fix chat session message issue

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,4 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 JWT_SECRET=xasfkytqzxmnvpoqertxaserwuto
+CHAT_URL=http://ec2-34-244-233-250.eu-west-1.compute.amazonaws.com:8000/
