Mega setup: Docker, Node Postgres, React and their connection 🚀

--- a/server/tsconfig.prod.json
+++ b/server/tsconfig.prod.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.common",
   "compilerOptions": {
-    "sourceMap": false
+    "sourceMap": false,
+    "inlineSourceMap": false
   }
 }
