--- a/server/package.json
+++ b/server/package.json
@@ -5,36 +5,36 @@
   "main": "index.js",
   "scripts": {
     "prepare": "install-peers",
-    "develop": "cp tsconfig.dev.json tsconfig.json",
     "start": "NODE_ENV=production node dist/index.js",
-    "start:dev": "nodemon src/index.ts",
-    "start:dev2": "ts-node-dev --respawn src/index.ts",
-    "build": "cp tsconfig.json tsconfig.backup.json 2>/dev/null || : && cp tsconfig.prod.json tsconfig.json && tsc -p . && cp tsconfig.backup.json tsconfig.json 2>/dev/null || : && rm tsconfig.backup.json 2>/dev/null || :",
-    "build:win": "cp tsconfig.json tsconfig.backup.json && cp tsconfig.prod.json tsconfig.json && tsc -p . && cp tsconfig.backup.json tsconfig.json && rm tsconfig.backup.json",
+    "start:dev": "nodemon src/index.ts  --inspect=0.0.0.0:9229 ",
+    "start:dev:brk": "nodemon src/index.ts  --inspect-brk=0.0.0.0:9229",
+    "build": "mv tsconfig.json tsconfig.backup.json && cp tsconfig.prod.json tsconfig.json && tsc -p . && mv tsconfig.backup.json tsconfig.json",
     "lint": "eslint 'src/**/*.{js,ts,tsx}'",
     "lint:fix": "eslint 'src/**/*.{js,ts,tsx}' --fix",
-    "husky": {
-      "hooks": {
-        "pre-commit": "lint-staged"
-      }
-    },
-    "lint-staged": {
-      "src/**/*.{js,ts,tsx}": [
-        "prettier --write",
-        "npm run lint --fix-dry-run",
-        "git add"
-      ]
-    },
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "console-error": "0.0.4",
+    "console-info": "0.0.5",
+    "console-warn": "0.0.4",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "dotenv-expand": "^5.1.0",
+    "express": "^4.17.1",
+    "express-mung": "github:richardschneider/express-mung#6efded3",
+    "express-rate-limit": "^5.1.1",
+    "helmet": "^3.22.0",
+    "lodash.clonedeep": "^4.5.0",
+    "morgan": "^1.10.0",
+    "pg": "^8.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/express-rate-limit": "^5.0.0",
+    "@types/http-errors": "^1.6.3",
     "@types/node": "^13.13.2",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
@@ -43,9 +43,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
-    "husky": "^4.2.5",
     "install-peers-cli": "^2.2.0",
-    "lint-staged": "^10.1.7",
     "nodemon": "^2.0.3",
     "prettier": "^2.0.5",
     "ts-node": "^8.9.1",
