--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.common",
   "compilerOptions": {
-    "inlineSourceMap": true,
-    "sourceMap": false
+    "sourceMap": false,
+    "inlineSourceMap": false
   }
 }
