--- a/server/.env.example
+++ b/server/.env.example
@@ -1,7 +1,8 @@
 NODE_ENV=development
-PORT=2999
+DEBUG=1
+PORT=2223
 # Quotes not required!
-CORS_WHITELIST="http://localhost:2999, http://localhost:3344, http://172.16.0.4:3700"
+CORS_WHITELIST="http://localhost:2223, http://localhost:2222, http://172.16.0.4:2222"
 CORS_SELF=1
 
 # Set API Limits!
