--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,18 @@
     "build": "mv tsconfig.json tsconfig.backup.json && cp tsconfig.prod.json tsconfig.json && tsc -p . && mv tsconfig.backup.json tsconfig.json",
     "lint": "eslint 'src/**/*.{js,ts,tsx}'",
     "lint:fix": "eslint 'src/**/*.{js,ts,tsx}' --fix",
+    "lint:fix-dry": "eslint 'src/**/*.{js,ts,tsx}' --fix-dry-run",
+    "husky": {
+      "hooks": {
+        "pre-commit": "lint-staged"
+      }
+    },
+    "lint-staged": {
+      "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+        "prettier --write",
+        "npm run lint:fix"
+      ]
+    },
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -27,15 +39,23 @@
     "express-mung": "github:richardschneider/express-mung#6efded3",
     "express-rate-limit": "^5.1.1",
     "helmet": "^3.22.0",
+    "http-errors": "^1.7.3",
     "lodash.clonedeep": "^4.5.0",
     "morgan": "^1.10.0",
     "pg": "^8.0.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
+    "@types/express-mung": "^0.5.2",
     "@types/express-rate-limit": "^5.0.0",
+    "@types/helmet": "0.0.46",
     "@types/http-errors": "^1.6.3",
+    "@types/lodash.clonedeep": "^4.5.6",
+    "@types/morgan": "^1.9.0",
     "@types/node": "^13.13.2",
+    "@types/pg": "^7.14.3",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
     "eslint": "^6.8.0",
@@ -43,7 +63,9 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
+    "husky": "^4.2.5",
     "install-peers-cli": "^2.2.0",
+    "lint-staged": "^10.2.0",
     "nodemon": "^2.0.3",
     "prettier": "^2.0.5",
     "ts-node": "^8.9.1",
